crates/ty_python_semantic/resources/mdtest/snapshots/Different_ways_that_…_-_unsupported_bool_con…_-_Has_a_`__bool__`_att…_(cb2950f7923c7d1c).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Different ways that `unsupported-bool-conversion` can occur - unsupported_bool_conversion.md - Has a `__bool__` attribute, but it's not callable
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unsupported_bool_conversion.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotBoolable:
2 |     __bool__: int = 3
3 | 
4 | a = NotBoolable()
5 | 
6 | # error: [unsupported-bool-conversion]
7 | 10 and a and True
```

# Diagnostics

```
error[unsupported-bool-conversion]: Boolean conversion is unsupported for type `NotBoolable`
 --> src/mdtest_snippet.py:7:8
  |
6 | # error: [unsupported-bool-conversion]
7 | 10 and a and True
  |        ^
  |
info: `__bool__` on `NotBoolable` must be callable
info: rule `unsupported-bool-conversion` is enabled by default

```
