crates/ty_python_semantic/resources/mdtest/snapshots/Different_ways_that_…_-_unsupported_bool_con…_-_Has_a_`__bool__`_met…_(3ab0bfc41c6699c).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: Different ways that `unsupported-bool-conversion` can occur - unsupported_bool_conversion.md - Has a `__bool__` method, but has incorrect parameters
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unsupported_bool_conversion.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotBoolable:
2 |     def __bool__(self, foo):
3 |         return False
4 | 
5 | a = NotBoolable()
6 | 
7 | # error: [unsupported-bool-conversion]
8 | 10 and a and True
```

# Diagnostics

```
error[unsupported-bool-conversion]: Boolean conversion is unsupported for type `NotBoolable`
 --> src/mdtest_snippet.py:8:8
  |
7 | # error: [unsupported-bool-conversion]
8 | 10 and a and True
  |        ^
  |
info: `__bool__` methods must only have a `self` parameter
 --> src/mdtest_snippet.py:2:9
  |
1 | class NotBoolable:
2 |     def __bool__(self, foo):
  |         --------^^^^^^^^^^^ Incorrect parameters
  |         |
  |         Method defined here
3 |         return False
  |
info: rule `unsupported-bool-conversion` is enabled by default

```
